# ngx-strict-sni

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/actions/: test.yml
.github/actions/test/: action.yml  debian12_arm64
.github/images/debian12_arm64/: Dockerfile
.github/workflows/: compile.yml
cicd/: maker.sh  nginx.key  test.conf
cicd/common/: debgen.sh
debian/scripts/: postinst  postrm
os/debian/: loader.conf
os/debian/scripts/: prerm
publish/: gpg.key.asc
publish/apt/: gpg.key.asc
publish/apt/conf/: distributions
publish/apt/dists/bookworm/: InRelease  Release  Release.gpg
publish/apt/dists/bookworm/main/binary-amd64/: Packages  Release
publish/apt/dists/bookworm/main/binary-arm64/: Packages
publish/apt/dists/bullseye/: InRelease  Release  Release.gpg
publish/apt/dists/bullseye/main/binary-amd64/: Packages  Release
publish/apt/dists/bullseye/main/binary-arm64/: Packages  Release
publish/apt/pool/main/libn/libnginx-mod-http-ssl-strict-sni/: libnginx-mod-http-ssl-strict-sni_1.0.0-1_amd64.deb  libnginx-mod-http-ssl-strict-sni_1.0.0-1_arm64.deb  libnginx-mod-http-ssl-strict-sni_1.0.1-1+deb11_amd64.deb  libnginx-mod-http-ssl-strict-sni_1.0.1-1+deb11_arm64.deb  libnginx-mod-http-ssl-strict-sni_1.0.1-1+deb12_amd64.deb  libnginx-mod-http-ssl-strict-sni_1.0.1-1+deb12_arm64.deb  libnginx-mod-http-ssl-strict-sni_1.0.1-1_amd64.deb  libnginx-mod-http-ssl-strict-sni_1.0.1-1_arm64.deb  libnginx-mod-http-ssl-strict-sni_1.0.2-1+deb11_amd64.deb  libnginx-mod-http-ssl-strict-sni_1.0.2-1+deb11_arm64.deb  libnginx-mod-http-ssl-strict-sni_1.0.2-1+deb12_amd64.deb  libnginx-mod-http-ssl-strict-sni_1.0.2-1+deb12_arm64.deb
publish/deb-unstable/conf/: distributions
publish/deb-unstable/dists/bookworm/: InRelease  Release  Release.gpg
publish/deb-unstable/dists/bookworm/main/binary-amd64/: Packages  Release
publish/deb-unstable/dists/bookworm/main/binary-arm64/: Packages  Release
publish/deb-unstable/dists/bullseye/: InRelease  Release  Release.gpg
publish/deb-unstable/dists/bullseye/main/binary-amd64/: Packages
publish/deb-unstable/dists/bullseye/main/binary-arm64/: Packages
publish/deb-unstable/pool/main/libn/libnginx-mod-http-ssl-strict-sni/: libnginx-mod-http-ssl-strict-sni_1.0.2-1+deb11_amd64.deb  libnginx-mod-http-ssl-strict-sni_1.0.2-1+deb11_arm64.deb  libnginx-mod-http-ssl-strict-sni_1.0.2-1+deb12_amd64.deb  libnginx-mod-http-ssl-strict-sni_1.0.2-1+deb12_arm64.deb  libnginx-mod-http-ssl-strict-sni_1.0.3-1+deb11_amd64.deb  libnginx-mod-http-ssl-strict-sni_1.0.3-1+deb11_arm64.deb  libnginx-mod-http-ssl-strict-sni_1.0.3-1+deb12_amd64.deb  libnginx-mod-http-ssl-strict-sni_1.0.3-1+deb12_arm64.deb  libnginx-mod-http-ssl-strict-sni_1.0.3-dev-1+deb11_amd64.deb  libnginx-mod-http-ssl-strict-sni_1.0.3-dev-1+deb11_arm64.deb  libnginx-mod-http-ssl-strict-sni_1.0.3-dev-1+deb12_amd64.deb  libnginx-mod-http-ssl-strict-sni_1.0.3-dev-1+deb12_arm64.deb
publish/deb/conf/: distributions
publish/deb/dists/bookworm/: InRelease  Release  Release.gpg
publish/deb/dists/bookworm/main/binary-amd64/: Packages
publish/deb/dists/bookworm/main/binary-arm64/: Packages
publish/deb/dists/bullseye/: InRelease  Release  Release.gpg
publish/deb/dists/bullseye/main/binary-amd64/: Packages
publish/deb/dists/bullseye/main/binary-arm64/: Packages  Release
publish/deb/pool/main/libn/libnginx-mod-http-ssl-strict-sni/: libnginx-mod-http-ssl-strict-sni_1.0.2-1+deb11_amd64.deb  libnginx-mod-http-ssl-strict-sni_1.0.2-1+deb11_arm64.deb  libnginx-mod-http-ssl-strict-sni_1.0.2-1+deb12_amd64.deb  libnginx-mod-http-ssl-strict-sni_1.0.2-1+deb12_arm64.deb  libnginx-mod-http-ssl-strict-sni_1.0.3-1+deb11_amd64.deb  libnginx-mod-http-ssl-strict-sni_1.0.3-1+deb11_arm64.deb  libnginx-mod-http-ssl-strict-sni_1.0.3-1+deb12_amd64.deb  libnginx-mod-http-ssl-strict-sni_1.0.3-1+deb12_arm64.deb
src/: lib.rs  logic.rs  util.rs
src/ngx_ext/: mod.rs  request.rs  str.rs  variable.rs
src/ngx_ext/http/: mod.rs  request.rs  variable.rs
test/: nginx.pem  test.conf  test.sh
tests/: check_all.rs  check_behavior.rs  nginx.conf
