[package]
name = "ngx-strict-sni"
version = "1.0.0"
authors = ["JyJyJcr <82190170+JyJyJcr@users.noreply.github.com>"]
edition = "2021"
homepage = "https://github.com/JyJyJcr/ngx-strict-sni"
description = "Strict SNI validator for Nginx"

[lib]
crate-type = ["cdylib"]

[dependencies]
ngx = { git = "https://github.com/JyJyJcr/ngx-rust",branch="ngx_install_dir" }

[package.metadata.deb]
name = "libnginx-mod-http-ssl-strict-sni"
section="httpd"
priority="optional"
depends = ["$auto","nginx-abi-1.22.1-7"]
recommends = "nginx"

assets = [
    ["target/release/libngx_strict_sni.so", "usr/lib/nginx/modules/ngx_http_ssl_strict_sni_module.so", "644"],
    ["debian/loader.conf", "usr/share/nginx/modules-available/mod-http-ssl-strict-sni.conf", "644"],
]
maintainer-scripts = "debian/scripts"

extended-description = """\
The ngx_http_ssl_strict_sni module is a validator of the integrity of SNI and the Host header. This blocks "SNI spoofing" to virtual hosts. Without ssl, this module has no effects."""
