[package]
name = "ngx-strict-sni"
version = "1.0.3-dev"
authors = ["JyJyJcr <82190170+JyJyJcr@users.noreply.github.com>"]
edition = "2021"
license = "WTFPL"
homepage = "https://github.com/JyJyJcr/ngx-strict-sni"
description = "Strict SNI validator for Nginx"

[lib]
crate-type = ["cdylib"]

[dependencies]
ngx = { git = "https://github.com/JyJyJcr/ngx-rust",branch="integ_test_inuse" }
#ngx = { path = "../ngx-rust"}


[dev-dependencies]
curl = "0.4.46"

[package.metadata.deb]
name = "libnginx-mod-http-ssl-strict-sni"
section="httpd"
priority="optional"
depends = ["$auto"]
recommends = "nginx"

assets = [
    ["target/release/libngx_strict_sni.so", "usr/lib/nginx/modules/ngx_http_ssl_strict_sni_module.so", "644"],
    ["os/debian/loader.conf", "usr/share/nginx/modules-available/mod-http-ssl-strict-sni.conf", "644"],
]
maintainer-scripts = "os/debian/scripts"

extended-description = """\
The ngx_http_ssl_strict_sni module is a validator of the integrity of SNI and the Host header. This blocks "SNI spoofing" to virtual hosts. Without ssl, this module has no effects."""


# revision format
# let main revision num to be %
# debian: %+deb<deb ver>
# ubuntu: 0ubuntu%

[package.metadata.deb.variants.debian12]
depends = ["$auto","nginx-abi-1.22.1-7"]
revision = "1+deb12"

[package.metadata.deb.variants.debian11]
depends = ["$auto","nginx-common (= 1.18.0-6.1+deb11u3)"]
revision = "1+deb11"

[package.metadata.deb.variants.ubuntu22]
depends = ["$auto","nginx-common (= 1.18.0-6ubuntu14.4)"]
revision = "0ubuntu1"




